--- a/UGD8_A_9616.html
+++ b/UGD8_A_9616.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="vue.js"></script>
 </head>
 <body>
@@ -34,7 +35,8 @@
         <div class="text-center" v-show="lose">
             <p class="text-danger">Kesempatan Sudah Habis, Jangan Marah</p>
             <p class="text-danger">Angka yang benar adalah {{ random }}</p>
-            <button type="button" class="btn btn-outline-secondary" @click="restart" :disabled="status">Main Lagi SKUY</button>
+            <button type="button" class="btn btn-outline-secondary" @click="restart" 
+            :disabled="status">Main Lagi SKUY</button>
         </div>
         <br>
 
