--- a/TUGAS.html
+++ b/TUGAS.html
@@ -32,6 +32,7 @@
                   <textarea class="form-control" id="catatan" rows="2" v-model="Todo.note"></textarea>
                 </div>
                 <button type="button" class="btn btn-outline-primary" @click="catat">Add</button>
+                <button type="reset" class="btn btn-outline-danger">Reset</button>
             </form>
         </div>
         <ul class="list-group">
